# chatgpt_video_summarizer

./: .dockerignore  .gitignore  Dockerfile  README.md  api.py  junit.xml  main.py  pyproject.toml  requirements.txt  video_urls.yaml
.circleci/: config.yml
src/: configs.py  extract_transcript.py  params.py  params.yaml  summarize_video.py  video_urls.yaml
tests/: test_api.py  test_extract_transcript.py
video_summarizer/: api.py  main.py
video_summarizer/backend/: api.py  chat_video.py  main.py
video_summarizer/backend/configs/: config.py  configs.py  params.yaml
video_summarizer/backend/src/: chat_video.py  extract_transcript.py  summarize_video.py  utils.py
video_summarizer/backend/utils/: auth.py
video_summarizer/configs/: configs.py
video_summarizer/frontend/: server.py  ui.py  utils.py
video_summarizer/src/: extract_transcript.py  params.yaml  summarize_video.py  utils.py
